--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 <body>
 
-<h1>My First Heading</h1>
+<h1>Devin Hillenius Portfolio</h1>
 
-<p>My first paragraph.</p>
+<p>This website is in progress.</p>
 
 </body>
 </html>
