--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 
 <h1>Devin Hillenius Portfolio</h1>
 
-<p>This website is in progress.</p>
+<p>Sorry for the poor design, this website is still in progress!</p>
+<p><a href="assignment1.html">Assignment 1 (Pencil, Photoshop, InDesign)</a></p>
 
 </body>
 </html>
