--- a/assignment1.html
+++ b/assignment1.html
@@ -6,12 +6,12 @@
 <h2>Assignment 1 (Pencil, Photoshop, InDesign)</h2>
 <p>My report can be found <a href="report.pdf">here!</a> (made in InDesign)</p>
 
-<p> The sketches I made in Pencil: 
+<p> The sketches I made in Pencil: <br />
 	<img src="sketch1.png" />
 	<img src="sketch2.png" />
 	<img src="sketch3.png" /> </p>
 
-<p> The final design I made in Photoshop:
+<p> The final design I made in Photoshop: <br />
 	<img src="ontwerp.png" /> </p>
 
 
