--- a/index.html
+++ b/index.html
@@ -5,7 +5,13 @@
 <h1>Devin Hillenius Portfolio</h1>
 
 <p>Sorry for the poor design, this website is still in progress!</p>
+<h2>Individual Assignments:</h2>
 <p><a href="assignment1.html">Assignment 1 (Pencil, Photoshop, InDesign)</a></p>
+
+<h2>Group Assignments:</h2>
+<p><a href="groupassignment1.pdf">Assignment 1</a></p>
+<p><a href="groupassignment2.pdf">Assignment 2</a></p>
+
 
 </body>
 </html>
