--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 
 <h1>Devin Hillenius Portfolio</h1>
 
-<p>Sorry for the poor design, this website is still in progress!</p>
+<p>Sorry voor het slechte design, deze website is nog work in progress. Daarnaast volg ik dit vak als extra vak naast mijn eigen studie, vandaar dat ik maar één individuele opdracht per week hoef te maken! :-)</p>
 <h2>Individual Assignments:</h2>
 <p><a href="assignment1.html">Assignment 1 (Pencil, Photoshop, InDesign)</a></p>
+<p><a href="assignment2.pdf">Assignment 2 (User Testing)</a></p>
 
 <h2>Group Assignments:</h2>
 <p><a href="groupassignment1.pdf">Assignment 1</a></p>
