--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <h2>Individual Assignments:</h2>
 <p><a href="assignment1.html">Assignment 1 (Pencil, Photoshop, InDesign)</a></p>
 <p><a href="assignment2.pdf">Assignment 2 (User Testing)</a></p>
+<p><a href="https://youtu.be/VR4Y2dWp6tU">Assignment 3 (Social Interaction)</a></p>
 
 <h2>Group Assignments:</h2>
 <p><a href="groupassignment1.pdf">Assignment 1</a></p>
