--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <h2>Group Assignments:</h2>
 <p><a href="groupassignment1.pdf">Assignment 1</a></p>
 <p><a href="groupassignment2.pdf">Assignment 2</a></p>
+<p><a href="groupassignment4.pdf">Assignment 4</a></p>
 
 
 </body>
