--- a/eindproject.html
+++ b/eindproject.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Devin Hillenius Portfolio</title>
+	<title>Devin Hillenius | Eindproject</title>
 	<link rel="stylesheet" href="css/default.css">
 	<link href='https://fonts.googleapis.com/css?family=Martel:300,200' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300,200,200italic,300italic,400italic,600,600italic' rel='stylesheet' type='text/css'>
