--- a/index.html
+++ b/index.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Devin Hillenius Portfolio</title>
+	<title>Devin Hillenius | Frontpage</title>
+	<link rel="stylesheet" href="css/default.css">
+	<link href='https://fonts.googleapis.com/css?family=Martel:300,200' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300,200,200italic,300italic,400italic,600,600italic' rel='stylesheet' type='text/css'>
 </head>
 <body>
-
-<h1>Devin Hillenius Portfolio</h1>
-
-<p>Sorry voor het slechte design, deze website is nog work in progress. Daarnaast volg ik dit vak als extra vak naast mijn eigen studie, vandaar dat ik maar één individuele opdracht per week hoef te maken! :-)</p>
-<h2>Individual Assignments:</h2>
-<p><a href="assignment1.html">Assignment 1 (Pencil, Photoshop, InDesign)</a></p>
-<p><a href="assignment2.pdf">Assignment 2 (User Testing)</a></p>
-<p><a href="https://youtu.be/VR4Y2dWp6tU">Assignment 3 (Social Interaction)</a></p>
-<p><a href="assignment4.html">Assignment 4 (Visual Design)</a></p>
-
-<h2>Group Assignments:</h2>
-<p><a href="groupassignment1.pdf">Assignment 1</a></p>
-<p><a href="groupassignment2.pdf">Assignment 2</a></p>
-<p><a href="groupassignment3.pdf">Assignment 3</a></p>
-<p><a href="groupassignment4.pdf">Assignment 4</a></p>
-
-
+	<div class="header">
+		<a id="header-text" href="/index.html">Devin Hillenius</a>
+		<div class="menu">
+			<a id="menu-link" href="deliverables.html">Deliverables</a>
+			<a id="menu-link" href="eindproject.html">Eindproject</a>
+			<a id="menu-link" href="dump.html">Dump</a>
+		</div>
+	</div>
+	<div class="content">
+		<h1> Devin Hillenius</h1>
+		<p>Ik ben eerstejaars bachelor student Informatica aan de Universiteit van Amsterdam. Deze portfoliosite is gerealiseerd voor het vak Interactieontwerp van de studie Informatiekunde.</p>
+		<p>Onder het kopje <em>Deliverables</em> zijn de verschillende resultaten van de individuele en groepsopdrachten te vinden die gedaan zijn voor Interactieontwerp of Multimedia. Daarnaast zal onder het kopje <em>Eindproject</em> alle informatie te vinden zijn over het eindopdracht dat gedaan is voor Interactieontwerp en Multimedia. Tot slot zullen onder het kopje <em>Dump</em> verschillende randzaken te vinden zijn als wireframes en ontwerpen.</p>
+		<img src="img/frontpage.png" />
+	</div>
 </body>
 </html>
